# haAutomation

./: .gitattributes  .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md
.claude/memory/: MEMORY.md  README.md  project_ha_smarthome_mqtt_architecture.md  project_haautomation_erprobung_start.md  project_haautomation_home_topology.md  project_haautomation_known_releaks.md  project_haautomation_public_ready.md  project_haautomation_scope.md  reference_haautomation_repo.md  reference_inventory_server.md  user_role.md
.github/: dependabot.yml
.github/workflows/: ci.yml  rust-clippy.yml  security.yml
audit-log/: 2026-05-16-architect.md  2026-05-16-docs.md  2026-05-16-security.md  2026-05-16-sre.md  2026-05-26-ha-automation-dev-ist-stand-adr-0009.md  2026-05-30-nodered-iter1-setup.md
docs/: architecture.md  getting-started.md  nodered-integration.md  requirements.md  roadmap.md  strato-setup.md  test-umgebung-real-hardware.md  vps-setup.md
docs/cockpit/: README.md  ccu-jack-adoption-audit-derivat.md  iteration-1-backlog.md  kpi-baseline.md
docs/cockpit-audits/: 2026-05-16-architect.md  2026-05-16-docs.md  2026-05-16-security.md  2026-05-16-sre.md  2026-05-17-phase-1-closing-brief.md  README.md
docs/decisions/: 0001-rust-synchroner-minimal-stack.md  0002-sqlite-cache-yaml-source-of-truth.md  0003-vpn-provider-abstraktion-service-vpn.md  0004-authgate-uebergangs-sso.md  0005-build-host-inventory-statt-ci.md  0006-image-build-on-host-statt-registry.md  0007-eu-ki-vo-nicht-anwendbar.md  0008-eu-data-act-mapping.md  0009-nodered-sync-source.md  README.md
docs/memory/: MEMORY.md  README.md  project_haAutomation.md  project_haAutomation_home.md  project_habortfeld.md  project_habortfeld_home.md  reference_haAutomation_repo.md  reference_habortfeld_repo.md  reference_inventory_server.md  user_role.md
docs/runbooks/: coordinator-replacement.md  inventory-build-host.md  nodered-flow-analysis-with-claude.md  nodered-flow-update.md  raspberry-pi-install.md
edge-secrets/recipients/: README.md
home-inventory/: .dockerignore  Cargo.toml  README.md  about.toml  deny.toml  smoke-test.sh  sync-ha.sh
home-inventory/.cargo/: audit.toml
home-inventory/docker/: Dockerfile  README.md  docker-compose.vpn.netbird.yml  docker-compose.vps.yml  justfile
home-inventory/scripts/: generate-notices.sh
home-inventory/secrets/vpn.wireguard/: wg0.conf.example
home-inventory/src/: auth.rs  git_publish.rs  main.rs  types.rs  views.rs
home-inventory/src/sync/: ccu.rs  ha.rs
inventory/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml  smoke-test.sh  sync-ha.sh  test-setup.env.example
inventory/.cargo/: audit.toml
inventory/docker/: Caddyfile  Dockerfile  README.md  docker-compose.strato.yml  docker-compose.vpn.netbird.yml  docker-compose.vpn.tailscale.yml  docker-compose.vpn.wireguard.yml  docker-compose.vps.yml  docker-compose.yml  justfile
inventory/fixtures/: ccu_devicelist.xml  devices.yaml  nodered_flows.json
inventory/migrations/: 0001_init.sql
inventory/scripts/: generate-notices.sh
inventory/secrets/: .sops.yaml  authgate.env.example  vpn.netbird.env.example  vpn.tailscale.env.example
inventory/secrets/vpn.wireguard/: wg0.conf.example
inventory/src/: db.rs  http.rs  main.rs  secrets.rs  types.rs  views.rs  yaml_io.rs
inventory/src/sync/: ccu.rs  ha.rs  hue.rs  mod.rs  nodered.rs  shelly.rs
scripts/: install-hooks.sh  trivy-scan.sh
scripts/hooks/: pre-commit
