[package]
name = "home-inventory"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "home inventory backend"
license = "MIT"
publish = false

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP server (sync, ohne tokio)
tiny_http = "0.12"

# HTTP client (sync, blocking)
ureq = { version = "2", default-features = false, features = ["tls"] }

# Datenbank
rusqlite = { version = "0.40", features = ["bundled"] }

# Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# XML (fuer CCU/RaspberryMatic devicelist.cgi)
roxmltree = "0.21"

# Basic-Auth-Header-Encoding fuer CCU (RaspberryMatic 3.65+ Default mit
# aktivierter Authentisierung). Bereits transitiv vorhanden (ueber den
# TLS-Stack); hier explizit als direkte Dependency gefuehrt, damit der
# Build nicht stillschweigend zerbricht, wenn die Transitivkette wechselt.
base64 = "0.22"

# mDNS-Discovery (fuer Shelly)
mdns-sd = "0.20"

# Error-Handling
anyhow = "1"

# Auth-Sidecar (Binary `authgate`): reine Rust-Crypto, kein C-Compiler noetig,
# damit das Sidecar unabhaengig vom inventory-Binary baut und testet.
# RustCrypto digest-0.11-Familie: hmac 0.13 / sha2 0.11 / pbkdf2 0.13 muessen
# gemeinsam wandern (gemeinsame digest-Version).
hmac = "0.13"
sha2 = "0.11"
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
# getrandom bleibt DAUERHAFT auf 0.2 — nicht als TODO, sondern strukturell:
# ring 0.17 (ueber ureq -> rustls -> ring) verlangt getrandom "^0.2.10". Ein
# Bump unseres direkten Deps auf 0.3/0.4 wuerde 0.2 NICHT ersetzen (ring zieht
# es weiter), sondern nur eine zweite getrandom-Major in den Baum bringen
# (auch im Release-Build). Erst wenn ring/rustls upstream auf getrandom 0.3+
# wechseln, lohnt der Umstieg — dann in authgate.rs random_bytes():
# getrandom::getrandom() -> getrandom::fill().
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = 0
