[package]
name = "inventory"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "home inventory backend"
license = "MIT"
publish = false

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP server (sync, ohne tokio)
tiny_http = "0.12"

# HTTP client (sync, blocking)
ureq = { version = "2", default-features = false, features = ["tls"] }

# Datenbank
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# XML (fuer CCU/RaspberryMatic devicelist.cgi)
roxmltree = "0.20"

# mDNS-Discovery (fuer Shelly)
mdns-sd = "0.13"

# Error-Handling
anyhow = "1"

# Auth-Sidecar (Binary `authgate`): reine Rust-Crypto, kein C-Compiler noetig,
# damit das Sidecar unabhaengig vom inventory-Binary baut und testet.
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = 0
