[package]
# TODO: rename crate to avoid name collision with crates.io 'inventory'.
# Currently causes cargo-audit false-positives (RUSTSEC-2023-0057/0058).
# Tracked in deny.toml [advisories].ignore.
name = "inventory"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "home inventory backend"
license = "MIT"
publish = false

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP server (sync, ohne tokio)
tiny_http = "0.12"

# HTTP client (sync, blocking)
ureq = { version = "2", default-features = false, features = ["tls"] }

# Datenbank
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# XML (fuer CCU/RaspberryMatic devicelist.cgi)
roxmltree = "0.21"

# Basic-Auth-Header-Encoding fuer CCU (RaspberryMatic 3.65+ Default mit
# aktivierter Authentisierung). Bereits transitiv vorhanden (ueber den
# TLS-Stack); hier explizit als direkte Dependency gefuehrt, damit der
# Build nicht stillschweigend zerbricht, wenn die Transitivkette wechselt.
base64 = "0.22"

# mDNS-Discovery (fuer Shelly)
mdns-sd = "0.20"

# Error-Handling
anyhow = "1"

# Auth-Sidecar (Binary `authgate`): reine Rust-Crypto, kein C-Compiler noetig,
# damit das Sidecar unabhaengig vom inventory-Binary baut und testet.
# Versions-Pinning: hmac 0.13 und getrandom 0.4 sind API-inkompatibel mit
# sha2 0.10 (digest-Version-Mismatch) bzw. unserem random_bytes()-Call. Bis
# sha2 0.11 stable ist und die Dep-Kette upgradet werden kann, bleiben wir
# auf den 0.12er/0.2er-Tracks. Dependabot-Hochstufungen darauf bitte
# zurueckhalten — vgl. authgate.rs-Fix 2026-05-30.
hmac = "0.13"
sha2 = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = 0
